# claude-code-sdk

./: .env.example  .env.tapestry.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  biome.json  ecosystem.config.cjs  feature-request-global-skills.md  hooks.yaml  marketplace.json  package.json
.agent/hooks/: Stop.ts  loom-metrics.ts  stage-manager-enforcement.ts  weave-analytics.ts  weave-hooks.ts
.agent/librarian/: README.md  librarian.json
.agent/loom/: LOOM-VALIDATION.md  config.json  notification-config.json  runbook.md  stack-config.json
.agent/weave/: INSTALL.md  INSTALLATION.md  README.md  SCHEMA.md  axiology.json  causation.json  coherence-checker.ts  debug-format.ts  deontics.json  epistemology.json  extraction.ts  history.json  index.ts  mereology.json  meta.json  modality.json  monitor-simple.ts  ontology.json  praxeology.json  prompt-coach.ts  qualia.json  session-end.ts  session-start.ts  session-update.ts  shadow.json  summary.md  teleology.json  test-e2e.ts  test.ts  types.ts  weave.ts
.claude/: CLAUDE.md  project-identity.json  sessions.json  settings.json  settings.json.backup
.claude-code-sdk/docs-cache/: delta-history.json  metadata.json
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.claude/agents/: architect.md  backend-dev.md  devops.md  frontend-dev.md  librarian.md  loom-executor.md  loom-finalizer.md  loom-ideator.md  loom-planner.md  qa-engineer.md  shadow-advisor.md  tech-writer.md
.claude/scripts/: conversation-viewer.ts  deep-memory-search.ts  session-lookup.ts
.claude/skills/: librarian.md  shadow-advisor.md
.github/workflows/: ci.yml
.loom/retrospectives/: misty-mongoose.md
apps/tapestry-observer/: package.json  react-router.config.ts
apps/tapestry-observer-v1/: .gitignore  tsconfig.json
commands/: README.md  sdk-plugins.md
docs/: HOOK-FRAMEWORK.md
examples/: hooks.yaml
examples/hooks/: framework-example.ts  session-manager-cli.ts  session-namer-hook.ts  tool-guard-hook.ts
hooks/: session-start.ts
integration-tests/: setup-lima.sh
integration-tests/fixtures/: session-start-hook.ts
integration-tests/results/: session-naming-test-MANUAL.md
integration-tests/tests/: session-name-injection.sh  session-naming-survival.sh  session-survival.sh
plugins/hook-framework/: README.md  hooks.yaml
scripts/: comms-doctor.sh  install-comms-agent.sh  install-hooks.sh  install-lima-tests.sh  patch-blessed.ts
skills/ci-cd-integration/: AUTOMATION.md  GITHUB-ACTIONS.md  PIPELINES.md
skills/claude-code-reference/: CONCEPTS.md  HEADLESS.md  SKILL.md  SUBAGENTS.md  WHATS-NEW.md
skills/code-review/: CHECKLIST.md  PR-WORKFLOWS.md  REVIEW-PROMPTS.md
skills/context-optimization/: INDICATORS.md  STRATEGIES.md  WORKFLOWS.md
skills/cost-optimization/: MODEL-SELECTION.md  MONITORING.md  SKILL.md  TOKEN-STRATEGIES.md
skills/creating-hooks/: EVENTS.md  EXAMPLES.md  FRONTMATTER-HOOKS.md  SKILL.md  TROUBLESHOOTING.md
skills/creating-mcp-servers/: EXAMPLES.md  SKILL.md  TRANSPORTS.md  TROUBLESHOOTING.md
skills/creating-plugins/: COMPONENTS.md  DISTRIBUTION.md  MANIFEST.md  SKILL.md
skills/creating-subagents/: DEFINITION.md  EXAMPLES.md  PATTERNS.md  SKILL.md
skills/custom-slash-commands/: EXAMPLES.md  SKILL.md  TROUBLESHOOTING.md
skills/database-workflows/: MIGRATIONS.md  QUERIES.md  SCHEMA-DESIGN.md
skills/debugging-claude-code/: COMMON-ISSUES.md  DIAGNOSTICS.md  RECOVERY.md  SKILL.md
skills/documentation-generation/: API-DOCS.md  MAINTENANCE.md  (+1 more)
skills/rust-cli/reference/: Cargo.toml  README.md
skills/rust-cli/reference/crates/cli/: Cargo.toml
skills/rust-cli/reference/crates/cli/src/: cli.rs  main.rs
skills/rust-cli/reference/crates/core/: Cargo.toml
skills/rust-cli/reference/crates/core/src/: errors.rs  lib.rs  types.rs
src/: index.ts
tests/: adapters-integration.test.ts  adapters.test.ts  hook-events.test.ts  plugins.test.ts  sessions-central.test.ts  tracker.test.ts  transcript-cli.test.ts  transcript-recall.test.ts  transcripts.test.ts  unified-recall.test.ts  utils.test.ts
transcript-tui-rs/: .gitignore  Cargo.toml  README.md  RECIPE.md
transcript-tui-rs/.github/workflows/: release.yml
transcript-tui-rs/crates/hook-events-cli/: Cargo.toml
transcript-tui-rs/crates/hook-events-cli/src/: cli.rs  main.rs
transcript-tui-rs/crates/hook-events-cli/src/commands/: files.rs  info.rs  list.rs  mod.rs  search.rs  view.rs
transcript-tui-rs/crates/hook-events-cli/src/output/: colors.rs  human.rs  json.rs  mod.rs
transcript-tui-rs/crates/transcript-cli/: Cargo.toml
transcript-tui-rs/crates/transcript-cli/src/: cli.rs  main.rs
transcript-tui-rs/crates/transcript-cli/src/commands/: doctor.rs  index.rs  info.rs  list.rs  mod.rs  recall.rs  search.rs  view.rs
transcript-tui-rs/crates/transcript-cli/src/output/: colors.rs  human.rs  json.rs  minimal.rs  mod.rs
transcript-tui-rs/crates/transcript-core/: Cargo.toml
transcript-tui-rs/crates/transcript-core/src/: filter.rs  lib.rs  parser.rs  render.rs  types.rs
transcript-tui-rs/crates/transcript-cursive/: Cargo.toml
transcript-tui-rs/crates/transcript-cursive/src/: main.rs
transcript-tui-rs/crates/transcript-db/: Cargo.toml
transcript-tui-rs/crates/transcript-db/src/: connection.rs  hook_queries.rs  lib.rs  queries.rs  sessions.rs
transcript-tui-rs/crates/transcript-indexer/: Cargo.toml
transcript-tui-rs/crates/transcript-indexer/src/: adapter.rs  connection.rs  content_trimmer.rs  correlation.rs  daemon.rs  discovery.rs  hook_indexer.rs  indexer.rs  lib.rs  rebuild.rs  schema.rs  text_extract.rs
transcript-tui-rs/crates/transcript-tui/: Cargo.toml
transcript-tui-rs/crates/transcript-tui/src/: cli.rs  main.rs
transcript-tui-rs/crates/transcript-ui/: Cargo.toml
transcript-tui-rs/crates/transcript-ui/src/: app.rs  event.rs  lib.rs
transcript-tui-rs/crates/transcript-ui/src/components/: content_pane.rs  footer.rs  header.rs  list_pane.rs  mod.rs  overlays.rs  search.rs
transcript-tui-rs/crates/transcript-ui/src/views/: context.rs  custom.rs  human.rs  markdown.rs  minimal.rs  mod.rs  raw.rs
(+530 files in other folders)
