[package]
name = "transcript-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for managing Claude Code transcripts"

[[bin]]
name = "transcript"
path = "src/main.rs"

[dependencies]
transcript-core = { path = "../transcript-core" }
transcript-db = { path = "../transcript-db" }

# CLI
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Terminal colors
colored = "2.1"

# TTY detection
atty = "0.2"

# Text processing
regex = "1.11"

# Directories
dirs = "6.0"
