[package]
name = "transcript-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for managing Claude Code transcripts"

[[bin]]
name = "transcript"
path = "src/main.rs"

[dependencies]
transcript-core = { path = "../transcript-core" }
transcript-db = { path = "../transcript-db" }
transcript-indexer = { path = "../transcript-indexer" }

# CLI
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Terminal colors
colored = "2.1"

# TTY detection
atty = "0.2"

# Text processing
regex = "1.11"

# Database (for indexer)
rusqlite = { workspace = true }

# Directories
dirs = "6.0"
